First page link added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Ae Fones</h1>
+<h3>Bem-vindo a sua calculadora personalizada, mermão</h3>
+
+
+<p>Veja a lista de Ar Condicionados e consulte os detalhes, edite ou exclua</p>
+
+<%= link_to "Lista de ar condicionados", air_conditionings_path, class: "btn btn-primary" %>
