Tariff model added and pages created

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,4 @@
 <p>Veja a lista de Ar Condicionados e consulte os detalhes, edite ou exclua</p>
 
 <%= link_to "Lista de ar condicionados", air_conditionings_path, class: "btn btn-primary" %>
+<%= link_to "Lista de tarifas", air_conditionings_path, class: "btn btn-primary" %>
