--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 @import "pages/index";
 
 .footer {
-  background: #f4f4f4;
+  background:rgba(125, 253, 147, 0.521);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -44,7 +44,7 @@
 
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: rgba(125, 253, 147, 0.521);
 }
 
 .navbar-lewagon .navbar-collapse {
