show and edit typos

--- a/app/views/tariffs/show.html.erb
+++ b/app/views/tariffs/show.html.erb
@@ -41,8 +41,8 @@
 </p>
 
 <p>
-  <strong>Total fee without tax reais pew mwh:</strong>
-  <%= @tariff.total_fee_without_tax_reais_pew_mwh %>
+  <strong>Total fee without tax reais per mwh:</strong>
+  <%= @tariff.total_fee_without_tax_reais_per_mwh %>
 </p>
 
 <p>
