--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,9 @@
-<div class="container">
-    <h1>Ae Fones</h1>
-    <h3>Bem-vindo a sua calculadora personalizada, mermão</h3>
+<br>
+<h1>Ae Fones</h1>
+<h3>Sente o drama dessa belezura, mermão</h3>
+<p>Pega esse bannerzinho delicia e esses cards cremosos</p>
 
-
-    <p>Veja a lista de Ar Condicionados e consulte os detalhes, edite ou exclua</p>
-
-    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4))">
     <div class="container">
         <h1>Calculadora de gastos de energia. Ta pensando o que? <strong>Use e veja a <i>diferença nos seus gastos!</i></strong></h1>
         <br>
@@ -21,6 +19,40 @@
                 </button>
             </div>
         <% end %>
+        <br>
+    </div>
+</div>
+<br>
+<div class="cards">
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+        <%= link_to "Lista de ar condicionados", air_conditionings_path, class:"card-category" %>
+    </div>
+
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/lunch.jpg)">
+        <%= link_to "Lista de tarifas", tariffs_path, class:"card-category" %>
+    </div>
+
+    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/dinner.jpg)">
+        BACON
     </div>
 </div>
 
+<table>
+    <tr>
+        <th><h4 class='mr-3'>Ano 1</h4></th>
+        <th><h4 class='mr-3'>Ano 2</h4></th>
+        <th><h4 class='mr-3'>Ano 3</h4></th>
+        <th><h4 class='mr-3'>Ano 4</h4></th>
+        <th><h4 class='mr-3'>Ano 5</h4></th>
+        <th><h4 class='mr-3'>Ano 6</h4></th>
+        <th><h4 class='mr-3'>Ano 7</h4></th>
+        <th><h4 class='mr-3'>Ano 8</h4></th>
+        <th><h4 class='mr-3'>Ano 9</h4></th>
+        <th><h4 class='mr-3'>Ano 10</h4></th>
+    </tr>
+    <tr>
+        <td>Oi</td>
+    </tr>
+</table>
+
+ 
