--- a/app/views/air_conditionings/index.html.erb
+++ b/app/views/air_conditionings/index.html.erb
@@ -14,7 +14,7 @@
 
   <div class="row">
     <% @air_conditionings.each do |air_conditioning| %>
-      <div class="col-4">
+      <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card-product">
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <div class="card-product-infos">
