--- a/app/views/tariffs/index.html.erb
+++ b/app/views/tariffs/index.html.erb
@@ -13,7 +13,7 @@
 
 <div class="row">
   <% @tariffs.each do |tariff| %>
-    <div class="col-4">
+    <div class="col-sm-12 col-md-6 col-lg-4">
       <div class="card-product">
         <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
         <div class="card-product-infos">
